# thingplus-embedded

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md
apps/example/discover/: main.c
apps/example/smartband/: MQTTClient.h  Makefile  ThingPlus.c
docs/: Thingplus_Embedded_Guide.md  Thingplus_Embedded_Guide_EN.md  gateway.md
docs/gateway/: config.md  id.md  install.md  logging.md  mqttProtocol.md  restProtocol.md  sensorTypes.md  wifi.md
example/protocol/: MQTTLogging.h  Makefile  ThingPlus.c  ThingPlusConfig.c  ThingPlusConfig.h
example/protocol/linux/: MQTTLinux.c  MQTTLinux.h
examples/discover/: Makefile  main.c
examples/hbe/: Makefile  ca-cert.pem  config.h  main.c  pir.c  sht20.c  sht20.h
examples/maestro/: Makefile  config.h  htx23c.c  htx23c.h  main.c  pir.c  pir.h  sht20.h
examples/people-counter/: CMakeLists.txt
examples/people-counter/src/: CMakeLists.txt  apc100.c  apc100.h  gateway.c  gateway.h  main.c
examples/people-counter/tests/: CMakeLists.txt  apc100.cpp  gateway.cpp  main.cpp
examples/people-counter/tests/fixture/: async.h
examples/protocol/: .gitmodules  INSTALL  LICENSE  config.json
examples/smartband/: MQTTClient.c  Readme.md  ThingPlus.c  config.json
libs/include/: tdiscover.h  thingplus.h  tube_http.h
libs/log/: tube_log.c  tube_log.h
libs/src/http/: Makefile  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  sensor_driver.c  tube_curl.c  tube_curl.h  tube_http.c  tube_url.c
libs/src/mqtt/: Makefile  main.c  reassemble.c  service.c  service.h  tube_mqtt.c  tube_mqtt.h
libs/tdiscover/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  libtubehttp.la  sensor_driver.c  tcurl.c  tcurl.h  tdiscover.c  thingplus_discover.c  url.c
libs/tdiscover/autom4te.cache/: output.0  requests  traces.0  traces.1
libs/thingplus/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  reassemble.h  service.c  service.h  thingplus.c  thingplus.h
libs/thingplus/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
sdk/restapi/: Makefile  sensor_driver.h  tube_curl.c  tube_http.c  tube_http.h  tube_url.c  tube_url.h
src/sdk/restapi/: a.out  main.c
