CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(PeopleCounter VERSION 1.0.0)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)

ADD_COMPILE_OPTIONS(-Wall -g)
ADD_SUBDIRECTORY(src)

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
	ADD_SUBDIRECTORY(tests)

	ENABLE_TESTING()
	ADD_TEST(NAME unittest COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests/unittest)
ENDIF()

