ACLOCAL_AMFLAGS = -I m4

lib_LIBRARIES = libtdiscover.a
libtdiscover_a_SOURCES = sensor_driver.c \
			sensor_driver.h \
			tcurl.c \
			tcurl.h \
			url.c \
			url.h \
			tdiscover.c \
			log/tube_log.c \
			log/tube_log.h 
libtdiscover_a_CPPFLAGS = -I../include
include_HEADERS = ../include/tdiscover.h

lib_LTLIBRARIES = libtdiscover.la
libtdiscover_la_SOURCES = sensor_driver.c \
			 sensor_driver.h \
			 tcurl.c \
			 tcurl.h \
			 url.c \
			 url.h \
			 tdiscover.c \
			 log/tube_log.c \
			 log/tube_log.h
libtdiscover_la_CPPFLAGS = -I../include
