ACLOCAL_AMFLAGS = -I m4

lib_LIBRARIES = libthingplus.a
libthingplus_a_SOURCES = reassemble.c \
			reassemble.h \
			service.c \
			service.h \
			thingplus.c \
			log/tube_log.c
libthingplus_a_CPPFLAGS = -I.
include_HEADERS = thingplus.h

lib_LTLIBRARIES = libthingplus.la
libthingplus_la_SOURCES = reassemble.c \
			reassemble.h \
			service.c \
			service.h \
			thingplus.c \
			log/tube_log.c
libthingplus_la_CPPFLAGS = -I../../include
