ACLOCAL_AMFLAGS = -I m4

lib_LIBRARIES = libtubehttp.a
libtubehttp_a_SOURCES = sensor_driver.c \
			sensor_driver.h \
			tube_curl.c \
			tube_curl.h \
			tube_url.c \
			tube_url.h \
			tube_http.c
libtubehttp_a_CPPFLAGS = -I../../include
include_HEADERS = ../../include/tube_http.h

lib_LTLIBRARIES = libtubehttp.la
libtubehttp_la_SOURCES = sensor_driver.c \
			 sensor_driver.h \
			 tube_curl.c \
			 tube_curl.h \
			 tube_url.c \
			 tube_url.h \
			 tube_http.c
libtubehttp_la_CPPFLAGS = -I../../include
